--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@react-native-community/masked-view": "^0.1.6",
 		"axios": "^0.19.2",
+		"lodash": "^4.17.15",
 		"mobx": "^5.15.3",
 		"mobx-react": "^6.1.4",
 		"react": "16.12.0",
@@ -31,6 +32,7 @@
 		"@babel/core": "^7.8.3",
 		"@babel/plugin-proposal-decorators": "^7.8.3",
 		"@babel/runtime": "^7.8.3",
+		"@types/lodash": "^4.14.149",
 		"@types/react-native": "^0.61.5",
 		"@types/react-navigation": "^3.4.0",
 		"@vovkasm/tslint-config": "^2.0.1",
