--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"lodash": "^4.17.15",
 		"mobx": "^5.15.3",
 		"mobx-react": "^6.1.4",
+		"moment": "^2.24.0",
 		"react": "16.12.0",
 		"react-native": "0.61.5",
 		"react-native-gesture-handler": "^1.5.3",
