--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
 		"@react-native-community/masked-view": "^0.1.6",
 		"axios": "^0.19.2",
 		"lodash": "^4.17.15",
-		"mobx": "^5.15.3",
-		"mobx-react": "^6.1.4",
+		"mobx": "^5.15.4",
+		"mobx-react": "6.1.4",
 		"moment": "^2.24.0",
 		"react": "16.12.0",
 		"react-native": "0.61.5",
 		"react-native-gesture-handler": "^1.5.3",
+		"react-native-material-dropdown": "^0.11.1",
+		"react-native-material-ripple": "^0.9.1",
+		"react-native-material-textfield": "^0.16.1",
 		"react-native-reanimated": "^1.7.0",
 		"react-native-safe-area-context": "^0.6.2",
-		"react-native-screens": "^2.0.0-alpha.31",
+		"react-native-screens": "^2.0.0-alpha.32",
 		"react-navigation": "^4.0.10",
 		"react-navigation-stack": "^2.0.16"
 	},
@@ -34,7 +37,9 @@
 		"@babel/plugin-proposal-decorators": "^7.8.3",
 		"@babel/runtime": "^7.8.3",
 		"@types/lodash": "^4.14.149",
-		"@types/react-native": "^0.61.5",
+		"@types/react-native": "^0.61.7",
+		"@types/react-native-material-dropdown": "^0.11.3",
+		"@types/react-native-material-textfield": "^0.16.3",
 		"@types/react-navigation": "^3.4.0",
 		"@vovkasm/tslint-config": "^2.0.1",
 		"babel-plugin-module-resolver": "^4.0.0",
