--- a/package.json
+++ b/package.json
@@ -18,26 +18,27 @@
 		"axios": "^0.19.2",
 		"lodash": "^4.17.15",
 		"mobx": "^5.15.4",
-		"mobx-react": "6.1.4",
+		"mobx-react": "6.1.7",
+		"mobx-react-devtools": "^6.1.1",
 		"moment": "^2.24.0",
 		"react": "16.12.0",
 		"react-native": "0.61.5",
-		"react-native-gesture-handler": "^1.5.3",
+		"react-native-gesture-handler": "^1.5.6",
 		"react-native-material-dropdown": "^0.11.1",
 		"react-native-material-ripple": "^0.9.1",
 		"react-native-material-textfield": "^0.16.1",
 		"react-native-reanimated": "^1.7.0",
-		"react-native-safe-area-context": "^0.6.2",
-		"react-native-screens": "^2.0.0-alpha.32",
-		"react-navigation": "^4.0.10",
-		"react-navigation-stack": "^2.0.16"
+		"react-native-safe-area-context": "^0.7.2",
+		"react-native-screens": "^2.0.0-beta.2",
+		"react-navigation": "^4.1.1",
+		"react-navigation-stack": "^2.1.1"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.8.3",
+		"@babel/core": "^7.8.4",
 		"@babel/plugin-proposal-decorators": "^7.8.3",
-		"@babel/runtime": "^7.8.3",
+		"@babel/runtime": "^7.8.4",
 		"@types/lodash": "^4.14.149",
-		"@types/react-native": "^0.61.7",
+		"@types/react-native": "^0.61.12",
 		"@types/react-native-material-dropdown": "^0.11.3",
 		"@types/react-native-material-textfield": "^0.16.3",
 		"@types/react-navigation": "^3.4.0",
