--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 			"locales/*": ["locales/*"],
 			"models/*": ["models/*"],
 			"screens/*": ["screens/*"],
+			"services/*": ["services/*"],
 			"types/*": ["types/*"]
 		},
 		"esModuleInterop": true,
